# NeuroDB

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-bench.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: RESULTS.md  __init__.py  datasets.py  protocol.py  run_benchmark.py
docs/: ACCURACY.md  API_STABILITY.md  COLLECTIONS.md  DEPLOYMENT.md  OPERATIONS.md
examples/: quickstart.py
examples/anomaly_benchmark/: README.md  run.py
examples/benchmark_perf/: README.md  run.py
examples/collections/: build_sample.py  sample_service_health.ndcoll
neurodb/: __init__.py  __main__.py  ann.py  backup.py  config.py  embedding.py  hopfield.py  metrics.py  migrations.py  models.py  observability.py  portability.py  server.py  store.py
neurodb/collections/: __init__.py  bundle.py  license.py  signing.py
neurodb/static/: index.html
neurodb/synthesis/: __init__.py  generator.py
neurodb_client/: __init__.py  client.py  telemetry.py  validate.py
neurodb_client/integrations/: __init__.py  airflow.py  dagster.py  great_expectations.py
tests/: conftest.py  test_ann.py  test_api.py  test_api_maturity.py  test_api_security.py  test_backup.py  test_batch.py  test_benchmark_gate.py  test_bulk_append.py  test_capacity.py  test_client.py  test_collections.py  test_compaction.py  test_concurrency.py  test_config.py  test_contracts.py  test_crash_recovery.py  test_durability.py  test_filtered_recall.py  test_filters.py  test_hopfield.py  test_integrations.py  test_lifespan.py  test_limits.py  test_masks.py  test_metrics.py  test_migration.py  test_normalization.py  test_observability.py  test_portability.py  test_search.py  test_search_batch.py  test_store.py  test_store_edges.py  test_synthesis.py  test_telemetry.py  test_update.py  test_validate.py  test_wal.py
