[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurodb"
version = "0.1.0"
description = "A lightweight, container-native vector database for AI memory and semantic search."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "createif labs" }]
keywords = ["vector-database", "embeddings", "semantic-search", "ai", "similarity-search", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "numpy>=2.2.6",
    "prometheus-client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.1",
]
ann = ["hnswlib>=0.8"]  # optional approximate-nearest-neighbour backend (future)
# Optional data-stack adapters for client-side validation (neurodb_client.integrations).
great-expectations = ["great-expectations>=1.18.1"]
airflow = ["apache-airflow>=3.2.2"]
dagster = ["dagster>=1.13.10"]
integrations = ["great-expectations>=1.18.1", "apache-airflow>=3.2.2", "dagster>=1.13.10"]

[project.scripts]
neurodb = "neurodb.__main__:main"

[project.urls]
Homepage = "https://github.com/createiflabs/NeuroDB"
Source = "https://github.com/createiflabs/NeuroDB"
Issues = "https://github.com/createiflabs/NeuroDB/issues"

[tool.setuptools.packages.find]
include = ["neurodb*", "neurodb_client*"]

[tool.setuptools.package-data]
neurodb = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: FastAPI deliberately calls Depends()/Header()/Query() in argument defaults.
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = ["slow: load/perf smoke tests; only run with --run-slow"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["neurodb"]

[tool.coverage.run]
source = ["neurodb"]
omit = ["neurodb/__main__.py"]

[tool.bandit]
# B104: binding 0.0.0.0 is intentional for the container (annotated with nosec).
skips = ["B104"]
